[package]
name = "cryptopunks-events"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.14", features = ["full"] }
ethers = { version = "2.0.14", features = ["ws"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
futures = "0.3.31"
hex = "0.4.3"
serde_json = "1.0.140"
dotenv = "0.15.0"
